<resources>
    <string name="app_name">My Application111</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="random_button">Random</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum
    </string>
    <string name="hello_world">hello world !</string>
    <string name="toast_button">Toast</string>
    <string name="count">Count</string>
    <string name="random">Random</string>
    <string name="toast">Toast</string>
    <string name="_0">0</string>
    <string name="r">R</string>
    <string name="here_is_a_random_number_between_0_and_d">Here is a random number between 0 and %d</string>

</resources>